--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
  <header>
      <nav class="header-nav">
+         <div class="container">
         <a class="link header-link-main" lang="en" href=""><span class="logo">Web</span>Studio</a>
     <ul class="list header-list">
         <li class="header-item"><a class="link header-link current" href="">Студия</a></li>
@@ -25,6 +27,7 @@
         <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
+    </div>
  </header> 
  <!--main-->
  <main>
@@ -35,6 +38,7 @@
     </section>
     <!--hidden-->
     <section>
+    <div class="container">
     <h2 class="hidden-title">Преимущества</h2>
   <ul class="list hidden-list">
       <li class="hidden-item">
@@ -54,6 +58,7 @@
           <p class="hidden-after-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
       </li>
   </ul>
+     </div>
   </section>
   <!--specialization-->
   <section class="spec">
