--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
     </ul>
     </nav>
-    <ul class="list">
+    </div>
+    <div class="container"><ul class="list">
         <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
@@ -62,15 +63,18 @@
   </section>
   <!--specialization-->
   <section class="spec">
+    <div class="container">
 <h2 class="spec-title">Чем мы занимаемся</h2>
 <ul class="list spec-list">
     <li class="spec-item"><img src="./images/pc.jpg" alt="computer" width="370" height="294"></li>
     <li class="spec-item"><img src="./images/phone.jpg" alt="phone" width="370" height="294"></li>
     <li class="spec-item"><img src="./images/tablet.jpg" alt="tablet" width="370" height="294"></li>
 </ul>
+    </div>
 </section>
 <!--team-->
 <section class="team">
+    <div class="container">
 <h2 class="team-title">Наша команда</h2>
 <ul class="list team-list">
     <li class="team-item">
@@ -94,18 +98,22 @@
         <p class="team-after-title" lang="en">UI Designer</p>
     </li>
 </ul>
+    </div>
 </section>
  </main>
  <!--contacts-->
  <footer class="contacts">
+     <div class="section">
     <a class="link footer-link" lang="en" href=""><span class="logo">Web</span><span class="footer-logo">Studio</span></a>
-<address>
+     </div>
+    <address>
     <ul class="list">
     <li><a class="link location" target="_blank" rel="noopener noreferrer" href="https://goo.gl/maps/H8KkZWF5k92Sd77r9">г. Киев, пр-т Леси Украинки, 26</a></li>
     <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
     <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
 </address>
+     
  </footer>
 </body>
 </html>
