--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,113 +8,123 @@
     <title>Студия</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
- <header>
-     <nav class="header-nav">
-         <div class="container">
-        <a class="link header-link-main" lang="en" href=""><span class="logo">Web</span>Studio</a>
-    <ul class="list header-list">
-        <li class="header-item"><a class="link header-link current" href="">Студия</a></li>
-        <li class="header-item"><a class="link header-link" href="portfolio.html">Портфолио</a></li>
-        <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
-    </ul>
-    </nav>
-    </div>
-    <div class="container"><ul class="list">
-        <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-    </div>
- </header> 
- <!--main-->
- <main>
-     <!--hero-->
-      <section class="hero">
-          <h1 class="hero-title">Эффективные решения <br/> для вашего бизнеса</h1>
-      <button type="button" class="hero-btn">Заказать услугу</button>
-    </section>
-    <!--hidden-->
-    <section>
-    <div class="container">
-    <h2 class="hidden-title">Преимущества</h2>
-  <ul class="list hidden-list">
-      <li class="hidden-item">
-          <h3 class="hidden-semi-title">Внимание к деталям</h3>
-          <p class="hidden-after-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-      </li>
-      <li class="hidden-item">
-          <h3 class="hidden-semi-title">Пунктуальность</h3>
-          <p class="hidden-after-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-      </li>
-      <li class="hidden-item">
-          <h3 class="hidden-semi-title">Планирование</h3>
-          <p class="hidden-after-title">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-      </li>
-      <li class="hidden-item">
-          <h3 class="hidden-semi-title">Современные технологии</h3>
-          <p class="hidden-after-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-      </li>
-  </ul>
-     </div>
-  </section>
-  <!--specialization-->
-  <section class="spec">
-    <div class="container">
-<h2 class="spec-title">Чем мы занимаемся</h2>
-<ul class="list spec-list">
-    <li class="spec-item"><img src="./images/pc.jpg" alt="computer" width="370" height="294"></li>
-    <li class="spec-item"><img src="./images/phone.jpg" alt="phone" width="370" height="294"></li>
-    <li class="spec-item"><img src="./images/tablet.jpg" alt="tablet" width="370" height="294"></li>
-</ul>
-    </div>
-</section>
-<!--team-->
-<section class="team">
-    <div class="container">
-<h2 class="team-title">Наша команда</h2>
-<ul class="list team-list">
-    <li class="team-item">
-        <img src="./images/demyanenko.jpg" alt="demyanenko" width="270" height="260">
-        <h3 class="team-semi-title">Игорь Демьяненко</h3>
-        <p class="team-after-title" lang="en">Product Designer</p>
-    </li>
-    <li class="team-item">
-        <img src="./images/repyna.jpg" alt="repyna" width="270" height="260">
-        <h3 class="team-semi-title">Ольга Репина</h3>
-        <p class="team-after-title" lang="en">Frontend Developer</p>
-    </li>
-    <li class="team-item">
-        <img src="./images/tarasov.jpg" alt="tarasov" width="270" height="260">
-        <h3 class="team-semi-title">Николай Тарасов</h3>
-        <p class="team-after-title" lang="en">Marketing</p>
-    </li>
-    <li class="team-item">
-        <img src="./images/yermakov.jpg" alt="yermakov" width="270" height="260">
-        <h3 class="team-semi-title">Михаил Ермаков</h3>
-        <p class="team-after-title" lang="en">UI Designer</p>
-    </li>
-</ul>
-    </div>
-</section>
- </main>
- <!--contacts-->
- <footer class="contacts">
-     <div class="section">
-    <a class="link footer-link" lang="en" href=""><span class="logo">Web</span><span class="footer-logo">Studio</span></a>
-     </div>
-    <address>
-    <ul class="list">
-    <li><a class="link location" target="_blank" rel="noopener noreferrer" href="https://goo.gl/maps/H8KkZWF5k92Sd77r9">г. Киев, пр-т Леси Украинки, 26</a></li>
-    <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
-    <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
-    </ul>
-</address>
-     
- </footer>
+    <header>
+        <nav class="header-nav">
+            <div class="container">
+                <a class="link header-link-main" lang="en" href=""><span class="logo">Web</span>Studio</a>
+                <ul class="list header-list">
+                    <li class="header-item"><a class="link header-link current" href="">Студия</a></li>
+                    <li class="header-item"><a class="link header-link" href="portfolio.html">Портфолио</a></li>
+                    <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
+                </ul>
+        </nav>
+        </div>
+        <div class="container">
+            <ul class="list">
+                <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
+    </header>
+    <!--main-->
+    <main>
+        <!--hero-->
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения <br /> для вашего бизнеса</h1>
+            <button type="button" class="hero-btn">Заказать услугу</button>
+        </section>
+        <!--hidden-->
+        <section>
+            <div class="container">
+                <ul class="list hidden-list">
+                    <li class="hidden-item">
+                        <h3 class="hidden-semi-title">Внимание к деталям</h3>
+                        <p class="hidden-after-title">Идейные соображения, а также начало повседневной работы по
+                            формированию позиции.</p>
+                    </li>
+                    <li class="hidden-item">
+                        <h3 class="hidden-semi-title">Пунктуальность</h3>
+                        <p class="hidden-after-title">Задача организации, в особенности же рамки и место обучения кадров
+                            влечет за собой.</p>
+                    </li>
+                    <li class="hidden-item">
+                        <h3 class="hidden-semi-title">Планирование</h3>
+                        <p class="hidden-after-title">Равным образом консультация с широким активом в значительной
+                            степени обуславливает.</p>
+                    </li>
+                    <li class="hidden-item">
+                        <h3 class="hidden-semi-title">Современные технологии</h3>
+                        <p class="hidden-after-title">Значимость этих проблем настолько очевидна, что реализация
+                            плановых заданий.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--specialization-->
+        <section class="spec">
+            <div class="container">
+                <h2 class="spec-title">Чем мы занимаемся</h2>
+                <ul class="list spec-list">
+                    <li class="spec-item"><img src="./images/pc.jpg" alt="computer" width="370" height="294"></li>
+                    <li class="spec-item"><img src="./images/phone.jpg" alt="phone" width="370" height="294"></li>
+                    <li class="spec-item"><img src="./images/tablet.jpg" alt="tablet" width="370" height="294"></li>
+                </ul>
+            </div>
+        </section>
+        <!--team-->
+        <section class="team">
+            <div class="container">
+                <h2 class="team-title">Наша команда</h2>
+                <ul class="list team-list">
+                    <li class="team-item">
+                        <img src="./images/demyanenko.jpg" alt="demyanenko" width="270" height="260">
+                        <h3 class="team-semi-title">Игорь Демьяненко</h3>
+                        <p class="team-after-title" lang="en">Product Designer</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/repyna.jpg" alt="repyna" width="270" height="260">
+                        <h3 class="team-semi-title">Ольга Репина</h3>
+                        <p class="team-after-title" lang="en">Frontend Developer</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/tarasov.jpg" alt="tarasov" width="270" height="260">
+                        <h3 class="team-semi-title">Николай Тарасов</h3>
+                        <p class="team-after-title" lang="en">Marketing</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/yermakov.jpg" alt="yermakov" width="270" height="260">
+                        <h3 class="team-semi-title">Михаил Ермаков</h3>
+                        <p class="team-after-title" lang="en">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <!--contacts-->
+    <footer class="contacts">
+        <div class="container">
+            <div class="footer-content">
+                <a class="link footer-link" lang="en" href=""><span class="logo">Web</span><span
+                        class="footer-logo">Studio</span></a>
+                <address>
+                    <ul class="list">
+                        <li><a class="link location" target="_blank" rel="noopener noreferrer"
+                                href="https://goo.gl/maps/H8KkZWF5k92Sd77r9">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
