--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,16 @@
     <title>Портфолио</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header>
         <nav class="header-nav">
-        <a class="link header-link-portfolio" lang="en" href="index.html"><span class="logo">Web</span>Studio</a>
+            <a class="link header-link-portfolio" lang="en" href="index.html"><span class="logo">Web</span>Studio</a>
             <ul class="list">
                 <li><a class="link header-link" href="index.html">Студия</a></li>
                 <li><a class="link header-link current" href="portfolio.html">Портфолио</a></li>
@@ -40,65 +43,84 @@
 
             <ul class="list project-list">
                 <li class="project-item">
-                    <a class="project-link" href=""><img src="./images/notebook.jpg" alt="notebook" width="370" height="294">
-                    <h2 class="project-title">Технокряк</h2>
-                    <p class="project-after-title">Веб-сайт</p></a>
+                    <a class="project-link" href=""><img src="./images/notebook.jpg" alt="notebook" width="370"
+                            height="294">
+                        <h2 class="project-title">Технокряк</h2>
+                        <p class="project-after-title">Веб-сайт</p>
+                    </a>
                 </li>
                 <li class="project-item">
-                    <a class="project-link" href=""><img src="./images/poster.jpg" alt="poster" width="370" height="294">
-                    <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="project-after-title">Дизайн</p></a>
+                    <a class="project-link" href=""><img src="./images/poster.jpg" alt="poster" width="370"
+                            height="294">
+                        <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                        <p class="project-after-title">Дизайн</p>
+                    </a>
                 </li>
                 <li class="project-item">
-                    <a class="project-link" href=""><img src="./images/seafood.jpg" alt="seafood" width="370" height="294">
-                    <h2 class="project-title">Ресторан Seafood</h2>
-                    <p class="project-after-title">Приложение</p></a>
+                    <a class="project-link" href=""><img src="./images/seafood.jpg" alt="seafood" width="370"
+                            height="294">
+                        <h2 class="project-title">Ресторан Seafood</h2>
+                        <p class="project-after-title">Приложение</p>
+                    </a>
                 </li>
-                <a class="project-link" href=""><li class="project-item">
-                    <img src="./images/headphones.jpg" alt="headphones" width="370" height="294">
-                    <h2 class="project-title">Проект Prime</h2>
-                    <p class="project-after-title">Маркетинг</p></a>
+                <a class="project-link" href="">
+                    <li class="project-item">
+                        <img src="./images/headphones.jpg" alt="headphones" width="370" height="294">
+                        <h2 class="project-title">Проект Prime</h2>
+                        <p class="project-after-title">Маркетинг</p>
+                </a>
                 </li>
-                <a class="project-link" href=""><li class="project-item">
-                    <img src="./images/boxes.jpg" alt="boxes" width="370" height="294">
-                    <h2 class="project-title">Проект Boxes</h2>
-                    <p class="project-after-title">Приложение</p></a>
+                <a class="project-link" href="">
+                    <li class="project-item">
+                        <img src="./images/boxes.jpg" alt="boxes" width="370" height="294">
+                        <h2 class="project-title">Проект Boxes</h2>
+                        <p class="project-after-title">Приложение</p>
+                </a>
                 </li>
-                <a class="project-link" href=""><li class="project-item">
-                    <img src="./images/monitor.jpg" alt="monitor" width="370" height="294">
-                    <h2 class="project-title">Inspiration has no Borders</h2>
-                    <p class="project-after-title">Веб-сайт</p></a>
+                <a class="project-link" href="">
+                    <li class="project-item">
+                        <img src="./images/monitor.jpg" alt="monitor" width="370" height="294">
+                        <h2 class="project-title">Inspiration has no Borders</h2>
+                        <p class="project-after-title">Веб-сайт</p>
+                </a>
                 </li>
-                <a class="project-link" href=""><li class="project-item">
-                    <img src="./images/book.jpg" alt="book" width="370" height="294">
-                    <h2 class="project-title">Издание Limited Edition</h2>
-                    <p class="project-after-title">Дизайн</p></a>
+                <a class="project-link" href="">
+                    <li class="project-item">
+                        <img src="./images/book.jpg" alt="book" width="370" height="294">
+                        <h2 class="project-title">Издание Limited Edition</h2>
+                        <p class="project-after-title">Дизайн</p>
+                </a>
                 </li>
-                <a class="project-link" href=""><li class="project-item">
-                    <img src="./images/tag.jpg" alt="tag" width="370" height="294">
-                    <h2 class="project-title">Проект LAB</h2>
-                    <p class="project-after-title">Маркетинг</p></a>
+                <a class="project-link" href="">
+                    <li class="project-item">
+                        <img src="./images/tag.jpg" alt="tag" width="370" height="294">
+                        <h2 class="project-title">Проект LAB</h2>
+                        <p class="project-after-title">Маркетинг</p>
+                </a>
                 </li>
-                <a class="project-link" href=""><li class="project-item">
-                    <img src="./images/business.jpg" alt="business" width="370" height="294">
-                    <h2 class="project-title">Growing Business</h2>
-                    <p class="project-after-title">Приложение</p></a>
+                <a class="project-link" href="">
+                    <li class="project-item">
+                        <img src="./images/business.jpg" alt="business" width="370" height="294">
+                        <h2 class="project-title">Growing Business</h2>
+                        <p class="project-after-title">Приложение</p>
+                </a>
                 </li>
             </ul>
 
         </section>
     </main>
-<footer class="contacts">
-    <a class="link footer-link" lang="en" href=""><span class="logo">Web</span><span
-            class="footer-logo">Studio</span></a>
-    <address>
-        <ul class="list">
-            <li><a class="link location" target="_blank" rel="noopener noreferrer"
-                    href="https://goo.gl/maps/H8KkZWF5k92Sd77r9">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-    </address>
-</footer>
+    <footer class="contacts">
+        <a class="link footer-link" lang="en" href=""><span class="logo">Web</span><span
+                class="footer-logo">Studio</span></a>
+        <address>
+            <ul class="list">
+                <li><a class="link location" target="_blank" rel="noopener noreferrer"
+                        href="https://goo.gl/maps/H8KkZWF5k92Sd77r9">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
 </body>
+
 </html>
